--- a/booking.html
+++ b/booking.html
@@ -54,7 +54,14 @@
                             <label>Email</label><br>
                             <input type="email" name="email" class="form-control"><br>
                             <label>Rooms</label><br>
-                            <input type="text" name="rooms" class="form-control"><br>
+                            <select  name="rooms" class="form-control">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                          </select>            
+                
+                
                             <label>Adults</label><br>
                             <input type="text" name="adults" class="form-control"><br>
                             <label>Children</label><br>
