--- a/booking.html
+++ b/booking.html
@@ -15,7 +15,7 @@
         var rooms = document.forms["BookForm"]["rooms"].value;
 
 
-         if ( name == null || name == "" || age == null || age == "" ||address == null || address == "" ||email == null || email == "" || rooms == null || rooms == "" ||) {
+         if ( name == null || name == "" || age == null || age == "" ||address == null || address == "" ||email == null || email == "" || rooms == null || rooms == "" ) {
             alert("First name must be filled out");
             return false;
         }
